--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
     <h3>Score: <span id="score">0</span></h3>
     <button id="start-button">Start/Pause</button>
-    <div id="grid">
 
+    <div class="container">
+        <div id="grid">
+
+        </div>
     </div>
+    
     
 </body>
 </html>
