--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <h3>Score: <span id="score">0</span></h3>
-    <button id="start-button">Start/Pause</button>
+    <h3 class="score" >Score: <span id="score">0</span></h3>
+    <div id="start-button">Start/Pause</div>
 
     <div class="container">
         <div id="grid">
