--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <div id="start-button">Start/Pause</div>
 
     <div class="container">
+        <div class="instrux">
+            <p>Move Right: ➡️</p>
+            <p>Move Left: ⬅️</p>
+            <p>Rotate clockwise: <strong>Space bar</strong></p>
+            <p>Rotate Counter-clockwise: <strong>Command</strong> </p>
+
+        </div>
         <div id="grid">
 
         </div>
