--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             <p>Rotate Counter-clockwise: <strong>Command</strong> </p>
 
         </div>
-        <div id="grid">
+
+        <div id="grid"></div>
+
+        <div class="mini-grid-container">
+            <h3 class="mgHeader">Up Next:</h3>
 
         </div>
     </div>
