new game button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="titleS">S</div>
         </div>
         <div class="instrux">
+            <div id="newGameButton">New Game</div>
             <div id="start-button">Start/Pause</div>
             <p>Move Right: ➡️</p>
             <p>Move Left: ⬅️</p>
